create github pages

--- a/page1.html
+++ b/page1.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-6" data-rv-view="374" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-6" data-rv-view="374" style="background-color: rgb(239, 239, 239);">
 
     
 
