create github pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-  <section id="menu-12" data-rv-view="517">
+  <section id="menu-12" data-rv-view="0">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-2" data-rv-view="2" style="background-image: url(assets/images/green-cannabis-leaf-8b6wx7h-1-2000x1333.jpg);">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-2" data-rv-view="2" style="background-image: url(assets/images/green-cannabis-leaf-8b6wx7h-1-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -82,7 +82,7 @@
                                 <p>Safe Communication Using GPG Encryption and Pay with Cryptocurrency<br><strong>We ship WORLDWIDE from California*</strong></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-primary" href="https://mobirise.com">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-primary" href="page1.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
