--- a/page3.html
+++ b/page3.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-12" data-rv-view="517">
+  <section id="menu-12" data-rv-view="51">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-g" data-rv-view="73" style="background-image: url(assets/images/appdevelopermagazine.com-700x579.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-g" data-rv-view="46" style="background-image: url(assets/images/appdevelopermagazine.com-700x579.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content7-i" data-rv-view="78" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content7-i" data-rv-view="49" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
