--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-12" data-rv-view="517">
+  <section id="menu-12" data-rv-view="39">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-6" data-rv-view="374" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-6" data-rv-view="36" style="background-color: rgb(239, 239, 239);">
 
     
 
