--- a/page2.html
+++ b/page2.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-12" data-rv-view="517">
+  <section id="menu-12" data-rv-view="44">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header5-e" data-rv-view="69" style="background-image: url(assets/images/vip-memberships-705x364.png);">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header5-e" data-rv-view="41" style="background-image: url(assets/images/vip-memberships-705x364.png);">
 
     
 
