--- a/page6.html
+++ b/page6.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-12" data-rv-view="517">
+  <section id="menu-12" data-rv-view="78">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-r" data-rv-view="259" style="background-image: url(assets/images/mountains.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobirise.info/b">create a website</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-r" data-rv-view="75" style="background-image: url(assets/images/mountains.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
