--- a/page7.html
+++ b/page7.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-12" data-rv-view="517">
+  <section id="menu-12" data-rv-view="83">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-t" data-rv-view="295" style="background-image: url(assets/images/bg-image-smoke-green-2-1921x2497.jpg);">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-t" data-rv-view="80" style="background-image: url(assets/images/bg-image-smoke-green-2-1921x2497.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
