--- a/page9.html
+++ b/page9.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-12" data-rv-view="517">
+  <section id="menu-12" data-rv-view="98">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content7-11" data-rv-view="503" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content7-11" data-rv-view="96" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
