create github pages

--- a/page5.html
+++ b/page5.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-n" data-rv-view="64">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-n" data-rv-view="64">
     <div>
         <div>
             <div>
@@ -75,7 +75,7 @@
                                         <h2 class="mbr-section-title display-1">Nitrogen Caned Cannabis</h2>
                                         <p class="mbr-section-lead lead">Using a patented process to displace the oxygen inside the can with nitrogen, we can our cannabis in small batches as it is cured. We seal each can with an easy to open pop-top lid to create an air-tight and completely odorless package—that is, until you pop the lid and inhale the ripe, harvest-fresh aroma.</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="https://mobirise.com">Contact</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="page3.html">Contact</a> </div>
                                     </div>
                                 </div>
                             </div>
