create github pages

--- a/page1.html
+++ b/page1.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-6" data-rv-view="36" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-6" data-rv-view="36" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -97,7 +97,7 @@
                         <h5 class="card-subtitle">Potent Edible!</h5>
                         <p class="card-text">90mg THC
 <br>Net Wt. 22g</p>
-                        <div class="card-btn"><a href="page3.html" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page8.html" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                         <h4 class="card-title">Dank Vape</h4>
                         <h5 class="card-subtitle">Vape on a budget</h5>
                         <p class="card-text">Full gram thc vape many flavours</p>
-                        <div class="card-btn"><a href="page3.html" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page9.html" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
             </div>
