--- a/page4.html
+++ b/page4.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-l" data-rv-view="53">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-l" data-rv-view="53">
     <div>
         <div>
             <div>
@@ -78,7 +78,7 @@
 <br>Our locally sourced full spectrum oil, our science-forward approach and lush full body high
 <br>has made us a favorite for recreational and medical consumers.</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="page3.html">Contact</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="page9.html">Contact</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -93,7 +93,7 @@
                                         <h2 class="mbr-section-title display-1">Seriously potent cannabis gummies</h2>
                                         <p class="mbr-section-lead lead"> Our gummy line includes sativa (strawberry), hybrid (tropical punch), indica (plum), <strong>Private Reserve</strong> (pink lemonade) Recover (black and blue raspberry), and KushyCBD (peach).</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-info" href="page3.html">Contact</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-info" href="page9.html">Contact</a> </div>
                                     </div>
                                 </div>
                             </div>
