--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-t" data-rv-view="80" style="background-image: url(assets/images/bg-image-smoke-green-2-1921x2497.jpg);">
+<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-t" data-rv-view="80" style="background-image: url(assets/images/bg-image-smoke-green-2-1921x2497.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -82,7 +82,7 @@
                                 <p>All our vapes use premium terpenes blended into our cold-ethanol distillate. No other fillers are added…no P/G, no V/G, no dilutants.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-primary" href="page3.html">Contact</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-primary" href="page9.html">Contact</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
