--- a/page8.html
+++ b/page8.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-w" data-rv-view="85">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-w" data-rv-view="85">
     <div>
         <div>
             <div>
@@ -88,7 +88,7 @@
 <br>Peak Effect: 60-90 mins
 <br>* Gluten Free&nbsp;<br></p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="page3.html">Contact</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="page9.html">Contact</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
 <br>Peak Effect: 60-90 mins
 <br>* Gluten Free&nbsp;<br></p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="page3.html">Contact</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="page9.html">Contact</a> </div>
                                     </div>
                                 </div>
                             </div>
