create github pages

--- a/page3.html
+++ b/page3.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-g" data-rv-view="46" style="background-image: url(assets/images/appdevelopermagazine.com-700x579.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-g" data-rv-view="46" style="background-image: url(assets/images/appdevelopermagazine.com-700x579.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
